--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.0",
     "dayjs": "^1.11.18",
     "expo": "~54.0.21",
+    "expo-image-picker": "~16.0.2",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
