--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,15 +18,19 @@
     "axios": "^1.13.0",
     "dayjs": "^1.11.18",
     "expo": "~54.0.21",
+    "expo-av": "^16.0.7",
     "expo-image-picker": "~16.0.2",
     "expo-status-bar": "~3.0.8",
+    "expo-video-thumbnails": "^10.0.7",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.14.0",
     "zustand": "^5.0.8"
   },
   "private": true
